Attempting to Fix Image covering the letters

--- a/client/src/components/Glossary/Glossary.css
+++ b/client/src/components/Glossary/Glossary.css
@@ -1,6 +1,7 @@
 .intro-image{
     position: absolute;
     width: 100%;
+    top:100px;
 }
 
 .letter{
@@ -13,4 +14,11 @@
 
 .blank {
     height: 100%;
+}
+
+.column1 {
+	float: left;
+	width: 92%;
+    padding: 20px;
+	background-color: #a4f7e225;
 }
