--- a/client/src/components/Header/NavBar.css
+++ b/client/src/components/Header/NavBar.css
@@ -6,6 +6,7 @@
 .header {
     background: #FFFFFF;
     display: flex;
+    width: 100%;
     flex-direction: row;
     justify-content: flex-start;
     padding-top: 1.5%;
